refactor:change img

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="description" content="テキストテキストテキストテキスト">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="img2/favicon.ico">
+    <link rel="icon" href="img/favicon.ico">
     <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
     <link rel="stylesheet" href="css/style.css">
   </head>
@@ -13,7 +13,7 @@
   <body>
     <header>
       <h1 class="logo">
-        <a href="index.html"><img src="img2/logo.svg" alt="ロゴ"></a>
+        <a href="index.html"><img src="img/logo.svg" alt="ロゴ"></a>
       </h1>
       <nav class="menu-navi">
         <ul>
@@ -30,7 +30,7 @@
 
     <main>
       <div id="mainvisual">
-        <img src="img2/mainvisual.jpg" alt="オフィスの写真">
+        <img src="img/mainvisual.jpg" alt="オフィスの写真">
       </div>
 
       <section id="news" class="wrapper">
@@ -56,7 +56,7 @@
 
       <section id="about">
         <div class="about-left">
-          <img src="img2/about.jpg" alt="イメージ写真">
+          <img src="img/about.jpg" alt="イメージ写真">
         </div>
         <div class="about-right">
           <h2 class="headline">
@@ -81,13 +81,13 @@
             <li>
               <h3>Web制作・マーケティング</h3>
               <div>
-                <img src="img2/business1.jpg" alt="会議中の写真">
+                <img src="img/business1.jpg" alt="会議中の写真">
               </div>
             </li>
             <li>
               <h3>インターネットメディア事業</h3>
               <div>
-                <img src="img2/business2.jpg" alt="PC画面の写真">
+                <img src="img/business2.jpg" alt="PC画面の写真">
               </div>
             </li>
           </ul>
@@ -95,13 +95,13 @@
             <li>
               <h3>プロモーション企画・制作</h3>
               <div>
-                <img src="img2/business3.jpg" alt="撮影機材の写真">
+                <img src="img/business3.jpg" alt="撮影機材の写真">
               </div>
             </li>
             <li>
               <h3>ソーシャル企画・運営</h3>
               <div>
-                <img src="img2/business4.jpg" alt="SP画面の写真">
+                <img src="img/business4.jpg" alt="SP画面の写真">
               </div>
             </li>
           </ul>
@@ -154,7 +154,7 @@
           </table>
         </div>
         <div  class="company-right">
-          <img src="img2/company.jpg" alt="打ち合わせ中の写真">
+          <img src="img/company.jpg" alt="打ち合わせ中の写真">
         </div>
       </section>
     </main>
@@ -162,7 +162,7 @@
     <footer>
       <div class="footer-top">
         <div class="footer-left logo">
-          <a href="index.html"><img src="img2/logo.svg" alt="ロゴ"></a>
+          <a href="index.html"><img src="img/logo.svg" alt="ロゴ"></a>
         </div>
         <p class="footer-right">
           Web Entertainment Design Inc.<br>
