--- a/index.html
+++ b/index.html
@@ -12,18 +12,20 @@
 
   <body>
     <header>
-      <h1 class="logo">
-        <a href="index.html"><img src="img/logo.svg" alt="ロゴ"></a>
-      </h1>
-      <nav class="menu-navi">
-        <ul>
-          <li><a href="index.html#news">NEWS</a></li>
-          <li><a href="index.html#about">ABOUT</a></li>
-          <li><a href="index.html#business">BUSINESS</a></li>
-          <li><a href="index.html#company">COMPANY</a></li>
-        </ul>
-      </nav>
-      <div class="doc-request">
+      <div class="header-left">
+        <h1 class="logo">
+          <a href="index.html"><img src="img/logo.svg" alt="ロゴ"></a>
+        </h1>
+        <nav class="menu-navi">
+          <ul>
+            <li><a href="index.html#news">NEWS</a></li>
+            <li><a href="index.html#about">ABOUT</a></li>
+            <li><a href="index.html#business">BUSINESS</a></li>
+            <li><a href="index.html#company">COMPANY</a></li>
+          </ul>
+        </nav>
+      </div>
+      <div class="header-right">
         <a href="#">資料請求</a>
       </div>
     </header>
