style:講師指摘箇所修正

--- a/index.html
+++ b/index.html
@@ -118,39 +118,39 @@
           </h2>
           <table class="company-info">
             <tr>
-              <td class="index">会社名</td>
+              <th class="index">会社名</th>
               <td class="detail">ウェブエンターテイメントデザイン株式会社</td>
             </tr>
             <tr>
-              <td class="index">所在地</td>
+              <th class="index">所在地</th>
               <td class="detail">東京都渋谷区桜丘町99-9 West Building 3F</td>
             </tr>
             <tr>
-              <td class="index">代表</td>
+              <th class="index">代表</th>
               <td class="detail">ＸＸＸＸＸＸ</td>
             </tr>
             <tr>
-              <td class="index">設立</td>
+              <th class="index">設立</th>
               <td class="detail">2021年1月1日</td>
             </tr>
             <tr>
-              <td class="index">資本金</td>
+              <th class="index">資本金</th>
               <td class="detail">3,000,000円</td>
             </tr>
             <tr>
-              <td class="index">事業内容</td>
+              <th class="index">事業内容</th>
               <td class="detail">Web制作・マーケティング</td>
             </tr>
             <tr>
-              <td></td>
+              <th class="index blank"></th>
               <td class="detail">インターネットメディア事業</td>
             </tr>
             <tr>
-              <td></td>
+              <th class="index blank"></th>
               <td class="detail">プロモーション企画・制作</td>
             </tr>
             <tr>
-              <td></td>
+              <th class="index blank"></th>
               <td class="detail">ソーシャル企画・運営</td>
             </tr>
           </table>
